# OutlookCategorizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.py  run_ui.py  test_scoring.py  test_scoring_new.py
archive/v1.0_code/: categorizer.py  config_loader.py  outlook_client.py
archive/v1.0_entry_points/: run.py
config/: settings.yaml
config/rules/: pricing.yaml  pricing_v2.yaml
docs/: CLEANUP_PLAN.md  CLEANUP_VERIFICATION.md  CONFIDENCE_IMPROVEMENT_PLAN.md  ICON_AND_ASSETS_PLAN.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  OUTLOOK_CATEGORY_INTEGRATION.md  PERFORMANCE_AND_ML_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  UI_IMPLEMENTATION_CONFIDENCE.md  UI_IMPLEMENTATION_PLAN.md  UI_PLAN_GAP_ANALYSIS.md  UI_PLAN_SUMMARY.md
scripts/: migrate_pricing.py  verify_cleanup.py
src/: __init__.py  categorizer.py  outlook_client.py  scoring_engine.py
src/outlook_categorizer/: __init__.py  categorizer.py
src/outlook_categorizer/adapters/: __init__.py  config_loader.py  outlook_client.py
src/outlook_categorizer/cli/: __init__.py
src/outlook_categorizer/core/: __init__.py  models.py  pattern_matcher.py  scoring_engine.py
src/outlook_categorizer/services/: __init__.py  category_service.py  rule_manager.py  validation_service.py
src/outlook_categorizer/ui/: __init__.py  main_window.py
src/outlook_categorizer/ui/presenters/: __init__.py  base_presenter.py  category_presenter.py
src/outlook_categorizer/ui/utils/: __init__.py
src/outlook_categorizer/ui/views/: __init__.py  category_list.py
(+1 files in other folders)
